assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@279&family=Montserrat&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 18px;
}

body {
    font-family: 'Gemunu Libre', sans-serif;
    font-family: 'Montserrat', sans-serif;
    color: #d6d4d4;
    background-image: url("../images/silhouette-trial-biker-performing-balancing.jpg");
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}


/*Title link*/
header {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
    text-align: center;
    align-items: center;
    border: #4a4a4a;
    border-radius: 10px;
    background-color: rgba(74, 74, 74, 0.9);
    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
    height: 5em;
    margin: 5px;
}

#logo {
    font-family: 'Gemunu Libre', sans-serif;
    text-transform: uppercase;
    letter-spacing: 0.25em;
    font-size: 280%;
}

/*Navigation links*/

div nav ul {
    display: grid;
    grid-template-columns: 0.8fr 1fr 1fr 1fr 1fr 0.8fr;
    grid-template-areas:
        " . home rules gallery contact . ";
    text-align: center;
    margin: auto;
}

#home {
    grid-area: home;
}

#rules {
    grid-area: rules;
}

#gallery {
    grid-area: gallery;
}

#contact {
    grid-area: contact;
}

nav ul {
    background-color: rgba(74, 74, 74, 0.9);
    border: 2px #4a4a4a;
    padding: 5px 0 5px 0;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
}

nav {
    margin: 5px;
}

nav>ul>li {
    list-style-type: none;
    font-size: 120%;
    letter-spacing: 3px;
    margin: 5px 0 5px 0;
    padding: 5px 5px 5px 5px;
}

/* anchor link styling */

#here {
    all: unset;
    text-decoration: underline;
    cursor: pointer;
}

a {
    position: relative;
    display: inline-block;
    font-size: 110%;
    font-weight: 800;
    color: #4a4a4a;
    overflow: hidden;
    background: linear-gradient(to right, rgb(96, 96, 102), rgb(186, 186, 240) 50%, #d6d4d4 50%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-size: 200% 100%;
    background-position: 100%;
    transition: background-position 275ms ease;
}

a:hover,
a:focus {
    background-position: 0 100%;
    filter: blur(0.8px);
    -webkit-filter: blur(0.8px);
}

.active {
    border-bottom: solid 2px #d6d4d4;
    border-radius: 15%;
}

/*Main body content*/
main {
    border: 2px #4a4a4a;
    background-color: rgba(74, 74, 74, 0.9);
    text-align: center;
    margin: 5px;
    padding: 5px;
    border-radius: 10px;
    letter-spacing: 0.25px;
    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
    flex-grow: 2;
}

.inner-main {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(3rem, 1fr));
    grid-template-rows: repeat(auto-fit, minmax(3rem, 1fr));
    grid-template-areas:
        " . main-title . "
        "left-text center-text right-text";
}

.main-title {
    grid-area: main-title;
    font-size: 120%;
}

.left-text {
    grid-area: left-text;
    margin: 10px;
}

.center-text {
    grid-area: center-text;
    margin: 10px;
    padding-bottom: 20px;
}

.right-text {
    grid-area: right-text;
    margin: 10px;
}

/* Thank you for contacting us page */

.thankyou>h1 {
    padding: 20px;
    margin: auto;
    text-decoration: underline;
    font-size: 250%;
    color: #d6d4d4;
}

.thankyou>i {
    font-size: 250%;
    color: #2c2c2c;
    margin: 0 0 20px 0;
}

.thankyou>p {
    font-size: 200%;
    margin: 0 0 20px 0;
}

#thanks-button {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000;
    color: #d6d4d4;
    padding: 14px 20px;
    margin: 8px 0;
    border: 1px solid #000;
    border-radius: 10px;
    cursor: pointer;
    width: 100%;
    opacity: 0.8;
}

#thanks-button:hover,
#thanks-button:focus {
    color: #fff;
    opacity: 0.5;
}

/* Main page images grid and styling */

#inner-center-images {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
    grid-template-areas:
        "center-images-1 center-images-2 center-images-3 center-images-4";
    gap: 10px;
    padding-bottom: 10px;
}

#center-images-1 {
    grid-area: center-images-1;
    margin: auto;
}

#center-images-2 {
    grid-area: center-images-2;
    margin: auto;
}

#center-images-3 {
    grid-area: center-images-3;
    margin: auto;
}

#center-images-4 {
    grid-area: center-images-4;
    margin: auto;
}

#center-images-1,
#center-images-2,
#center-images-3,
#center-images-4 {
    border: 1px #4a4a4a;
    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
    border-radius: 20%;
}

div img {
    width: 310px;
    height: 180px;
}

.rules-img {
    width: 420px;
    height: 270px;
}

h2,
h4 {
    text-align: center;
    text-transform: uppercase;
    text-decoration: underline;
    letter-spacing: 3px;
    padding-top: 1em;
}

p {
    padding-left: 1em;
    padding-right: 1em;
}

strong {
    text-decoration: none;
    font-size: inherit;
}

.gallery-imgs {
    display: flex;
    width: 100%;
    min-height: 80vh;
    margin: auto;
    align-items: center;
    justify-content: space-around;
}

.gallery-imgs img {
    display: block;
    width: 100%;
    margin: 10px;
    min-width: 280px;
    max-width: 800px;
    padding: 2px 0 2px 0;
    height: auto;
    margin: auto;
    border-radius: 10px;
}

.video-1 {
    position: relative;
    width: 98%;
    padding-bottom: 56.25%;
    height: 0;
}

.video-1 iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 98%;
    height: 100%;
}

/* Sign up form styling */

.container {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    flex-grow: 2;
}
/* ... */

